# iot_module

./: .gitignore  CMakeLists.txt  README.md
example/ap_config/: CMakeLists.txt  example_apconfig.c
hal/: CMakeLists.txt  T_sys.c  T_sys.h  T_type.h
softap/: CMakeLists.txt  T_softap.c  T_softap.h
